--- a/views/testServer/testServer.html
+++ b/views/testServer/testServer.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+  </head>
   <body>
     <h3>hello zyl</h3>
+    <h3>你好</h3>
   </body>
 </html>
