fix: 优化GET/POST请求方式

--- a/views/ajaxDemo.html
+++ b/views/ajaxDemo.html
@@ -20,8 +20,8 @@
       <input type="text" name="answer2" id="answer2"/>
     </h3>
     <div id="btnGroup">
-      <button onclick="putAnswer()">提交答案</button>&nbsp;&nbsp;
-      <button onclick="searchAnswer()">查询答案</button>
+      <button onclick="putAnswer()">提交答案（POST）</button>&nbsp;&nbsp;
+      <button onclick="searchAnswer()">查询答案（GET）</button>
     </div>
     <div id="showAnswer"></div>
     <script type="text/javascript">
