--- a/views/pages/process_get.html
+++ b/views/pages/process_get.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
 		<title>process GET</title>
 	</head>
 	<body>
-		<form action="http://127.0.0.1:3000/process_get" method="GET">
+		<form action="getMethod" method="GET">
 			First Name: <input type="text" name="first_name">
 			<br>
 			Last Name: <input type="text" name="last_name">
