--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/public.css">
   </head>
   <body>
-    <form action="/users/add" method="POST">
+    <!-- <form action="/users/add" method="POST">
       <div>
         <label for="userName">名称：</label>
         <input type="text" id="userName" name="userName" />
@@ -16,6 +18,35 @@
       <div>
         <button type="submit">确定</button>
       </div>
-    </form>
+    </form> -->
+    <div>
+      <div class="title size-30">小吃店后台</div>
+      <div class="main-box flex-row">
+        <div class="content-box flex-column">
+          <div class="title size-20" onclick="uploadImg()">图库</div>
+          <div class="content">
+            <span class="induction">为不同模块添加图片，按照路径上传图片</span>
+          </div>
+        </div>
+        <div class="content-box">
+          <div class="title size-20">占位标题2</div>
+          <div class="content">
+            <span class="induction">占位简介</span>
+          </div>
+        </div>
+        <div class="content-box">
+          <div class="title size-20">占位标题3</div>
+          <div class="content">
+            <span class="induction">占位简介</span>
+          </div>
+        </div>
+        <div class="content-box">
+          <div class="title size-20">占位标题4</div>
+          <div class="content">
+            <span class="induction">占位简介</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
