--- a/views/index.html
+++ b/views/index.html
@@ -44,9 +44,23 @@
           </div>
         </div>
         <div class="content-box">
-          <div class="title size-20">占位标题3</div>
+          <div class="title size-20">注册用户</div>
           <div class="content">
-            <span class="induction">占位简介</span>
+            <span class="induction">
+              <form action="/users/add" method="POST">
+                <div>
+                  <label for="userName">姓名：</label>
+                  <input type="text" id="userName" name="userName" />
+                </div>
+                <div>
+                  <label for="passWord">密码：</label>
+                  <input type="password" id="passWord" name="passWord" />
+                </div>
+                <div>
+                  <button type="submit">确定</button>
+                </div>
+              </form>
+            </span>
           </div>
         </div>
         <div class="content-box">
