--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,7 @@
                   <button type="submit">确定</button>
                 </div>
               </form>
+              <p>u_name: 'zyl', u_pwd: '111'</p>
             </span>
           </div>
         </div>
