--- a/views/index.html
+++ b/views/index.html
@@ -23,11 +23,11 @@
             <span class="induction">
               <p>为不同模块添加图片，按照路径上传图片。</p>
               <span style="display: block;width: 100%;">
-                <a href="/fileUpload/upload">Ajax原生请求</a>
+                <a href="/fileUpload/upload" style="text-decoration: underline;">Ajax原生请求</a>
                 点击跳转到上传图片页面。
               </span>
               <span style="display: block;width: 100%;">
-                <p onclick="uploadImages()">Ajax原生请求</a>
+                <span onclick="uploadImages()" style="text-decoration: underline;">Ajax原生请求</span>
                 功能未完成，ajax请求，返回responseTxt。
               </span>
             </span>
