feat: 实现ajax原生方式创建文件目录及上传文件

--- a/views/index.html
+++ b/views/index.html
@@ -24,12 +24,12 @@
               <p>为不同模块添加图片，按照路径上传图片。</p>
               <span style="display: block;width: 100%;">
                 <a href="/fileUpload/upload" style="text-decoration: underline;">Ajax原生请求</a>
-                点击跳转到上传图片页面。
+                Ajax原生请求，点击跳转到上传图片页面。
               </span>
-              <span style="display: block;width: 100%;">
+              <!-- <span style="display: block;width: 100%;">
                 <span onclick="uploadImages()" style="text-decoration: underline;">Ajax原生请求</span>
-                功能未完成，ajax请求，返回responseTxt。
-              </span>
+                Ajax原生请求，返回responseTxt，功能未完成。
+              </span> -->
             </span>
           </div>
         </div>
